--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'events'
+      MYSQL_DATABASE: 'lab04'
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
+      MYSQL_USER: 'root'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: 'password_e_j_k'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password_e_j_k'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
