--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'lab04'
+      MYSQL_DATABASE: 'lab06'
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'root'
+      MYSQL_USER: 'user'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password_e_j_k'
+      MYSQL_PASSWORD: 'password'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password_e_j_k'
+      MYSQL_ROOT_PASSWORD: 'password'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
@@ -45,4 +45,4 @@ services:
       - my-db:/var/lib/mysql
 # Names our volume
 volumes:
-my-db:
+  my-db:
